<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Contador de comentarios -->
    <TextView
        android:id="@+id/tvCommentsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/comments_header"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvComments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Input -->
    <LinearLayout
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_write_comment"/>

        <Button
            android:id="@+id/btnPostComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_post_comment"/>
    </LinearLayout>
</LinearLayout>
