<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="#fff"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@android:color/white">

        <!--Logo-->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logofluxe"/>

        <!--Titulo-->
        <TextView
            android:text="@string/registerTxt"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="#737373"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_width="400dp"
            android:layout_height="100dp"/>

        <!--Usuario-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp">


            <EditText
                android:id="@+id/username"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:autofillHints="username"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:textColorHint="#000"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Nombre-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/firstName"
                android:hint="@string/firstName"
                android:importantForAutofill="no"
                android:inputType="textCapWords|textAutoCorrect"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:textColorHint="#000"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Apellido1-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/lastName"
                android:hint="@string/lastName"
                android:importantForAutofill="no"
                android:inputType="textCapWords|textAutoCorrect"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:textColorHint="#000"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Apellido2-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/secondName"
                android:hint="@string/secondName"
                android:importantForAutofill="no"
                android:inputType="textCapWords|textAutoCorrect"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:textColorHint="#000"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Correo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:textColorHint="#000"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Contrasena-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="400dp"
            android:layout_height="60dp">

            <EditText
                android:id="@+id/pwd"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:textColorHint="#000"
                app:passwordToggleEnabled="true"/>

        </com.google.android.material.textfield.TextInputLayout>


        <!--Registrar-->
        <Button
            android:id="@+id/singUpUser"
            android:text="@string/singUpUser"
            android:backgroundTint="#3498db"
            android:textColor="#fff"
            app:cornerRadius="0dp"
            android:layout_marginTop="15dp"
            android:layout_width="400dp"
            android:layout_height="50dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>